# ros2_arm_ik

./: .gitignore  CMakeLists.txt  README.md  package.xml  readme  readme.txt
config/: panda_controllers.yaml
launch/: panda_launch.py  panda_launch_move.py
scripts/: box_follow.py  box_follow_car.py  box_follow_car_with_Cam copy.py  box_follow_car_with_Cam.py  location.py  panda_circle.py  panda_ik_teleop.py  panda_pick.py  simple_ik.py  trajectory_demo.py
scripts/.marscode/: deviceInfo.json
urdf/: cube.urdf  mobile_panda.urdf.xacro  panda.urdf.xacro  panda_fixed.urdf  panda_fixed_only.urdf  simple_base.xacro  target_circle.urdf
